--- a/style.css
+++ b/style.css
@@ -208,6 +208,24 @@ a {
     align-items: center;
 }
 
+.contact-subheading .section-subheading {
+    border-bottom: 4px solid var(--color-text-secondary);
+}
+
+.contact-subheading svg {
+    stroke: var(--color-primary-900);
+    transition: stroke 0.2s ease;
+}
+
+.contact-subheading:hover .section-subheading {
+    color: var(--color-text-hovered);
+    border-bottom: 4px solid var(--color-background);
+}
+
+.contact-subheading:hover svg {
+    stroke: var(--color-primary-600);
+}
+
 .column-gap-small {
     column-gap: 1.6rem;
 }
@@ -226,6 +244,10 @@ a {
 
 .margin-top-none {
     margin-top: 0;
+}
+
+.margin-right-mini {
+    margin-right: 0.4rem;
 }
 
 .margin-right-small {
@@ -272,6 +294,22 @@ a {
     margin-bottom: 18rem;
 }
 
+.margin-left-mini {
+    margin-left: 0.4rem;
+}
+
+.margin-left-very-small {
+    margin-left: 0.8rem;
+}
+
+.padding-top-mini {
+    padding-top: 0.3rem;
+}
+
+.padding-top-telephone {
+    padding-top: 0.2rem;
+}
+
 .padding-top-small {
     padding-top: 1.6rem;
 }
@@ -310,6 +348,7 @@ a {
     font-size: 3rem;
     font-weight: 400;
     color: var(--color-text-secondary);
+    transition: all 0.2s ease;
 }
 
 .title {
@@ -328,11 +367,14 @@ a {
 }
 
 .nav-link {
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     color: var(--color-text-primary);
+    stroke: var(--color-text-primary);
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 0.08em;
     font-size: 1.8rem;
+    position: relative;
 }
 
 .nav-link::after {
@@ -353,17 +395,28 @@ a {
     font-size: 1.8rem;
     font-weight: 700;
     text-transform: uppercase;
+    color: var(--color-text-primary);
 }
 
 .find-card-section-info {
     font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 2rem;
     font-weight: 400;
+    color: var(--color-text-primary);
 }
 
-.address-link {
+.external-link {
     color: var(--color-text-primary);
-    border-bottom: 2px solid var(--color-primary-900);
+    stroke: var(--color-text-primary);
+    border-bottom: 2px solid var(--color-text-primary);
+    transition: all 0.2s ease;
+    position: relative;
+}
+
+.external-link:hover {
+    color: var(--color-text-hovered);
+    stroke: var(--color-text-hovered);
+    border-bottom: 2px solid var(--color-background-text);
 }
 
 .telephone-link {
@@ -382,10 +435,12 @@ a {
     color: var(--color-text-white);
     font-size: var(--text-size-footer);
     margin-top: 0;
+    position: relative;
 }
 
 .footer-link {
     color: var(--color-text-white);
+    stroke: var(--color-text-white);
     border-bottom: 2px solid var(--color-white);
     transition: all 0.2s ease;
     cursor: pointer;
@@ -393,6 +448,7 @@ a {
 
 .footer-link:hover {
     color: var(--color-text-white-hovered);
+    stroke: var(--color-text-white-hovered);
     border-bottom: 2px solid var(--color-black);
 }
 
@@ -472,16 +528,18 @@ a {
     text-transform: uppercase;
     letter-spacing: 0.08em;
     color: var(--color-primary-900);
+    stroke: transparent;
     background-color: var(--color-background-contact-button);
     border: 4px solid var(--color-primary-900);
     border-radius: 5px;
-    padding: 1.6rem 3.2rem;
+    padding: 1.6rem 4.8rem;
     outline: none;
-    border-radius: 5px;
+    position: relative;
+    cursor: pointer;
     box-shadow:  0px 3px 1px -2px rgba(0, 0, 0, 0.2), /*  2dp - umbra */
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), /* 2dp - penumbra */
     0px 1px 5px 0px rgba(0, 0, 0, 0.12); /* 2dp - ambient */
-    transition: box-shadow 0.2s ease, transform 0.2s ease;
+    transition: all 0.2s ease;
 }
 
 .text-box {
@@ -579,11 +637,32 @@ a {
     align-items: center;
     width: 80%;
     padding: 6.4rem 0;
+    max-width: 150rem;
 }
 
 .footer > * {
     flex-basis: 0;
     flex-grow: 1;
+}
+
+.nav-icon {
+    position: absolute;
+    left: -3rem;
+}
+
+.button-icon {
+    position: absolute;
+    right: 3rem;
+    transition: right 0.2s ease;
+}
+
+.external-link-icon {
+    position: absolute;
+}
+
+.telephone-link-icon {
+    position: absolute;
+    right: -2.4rem;
 }
 
 .continue-icon {
@@ -702,7 +781,7 @@ body.header-not-at-top .continue-icon {
     }
 
     .section-subheading {
-        font-size: 2.5rem;
+        font-size: 2.4rem;
     }
 
     .normal-text {
@@ -719,10 +798,12 @@ body.header-not-at-top .continue-icon {
 
     .find-card-section-heading {
         font-size: 1.8rem;
+        text-align: center;
     }
 
     .find-card-section-info {
         font-size: 1.8rem;
+        text-align: center;
     }
 
     .disease-heading {
@@ -738,9 +819,7 @@ body.header-not-at-top .continue-icon {
     }
 }
 
-
 /* Styling for mobile screens */
-
 @media screen and (max-width: 950px) {
     .navbar-div {
         margin-bottom: 3.2rem;
@@ -771,14 +850,19 @@ body.header-not-at-top .continue-icon {
         display: block;
         width: 100%;
         padding: 0;
-        padding-top: 9.6rem;
+        padding-top: 12.8rem;
         margin: auto;
+        margin-bottom: 3.2rem;
     }
 
     .responsive .nav-link {
         display: block;
         text-align: center;
         margin: 0;
+    }
+
+    .responsive .nav-div .nav-link:not(:last-child) {
+        margin-bottom: 3.2rem;
     }
 
     .responsive .nav-link:hover::after {
@@ -849,8 +933,8 @@ body.header-not-at-top .continue-icon {
         align-items: center;
     }
 
-    .disease-card {
-        align-items: center;
+    .disease-heading {
+        text-align: center;
     }
 
     .diseases-graphic-top-right {
@@ -907,14 +991,26 @@ body.header-not-at-top .continue-icon {
         text-align: center;
         align-items: center;
     }
-}
 
-@media screen and (max-width: 450px) {
-    .title {
-        font-size: 3.6rem;
+    .padding-top-mini {
+        padding-top: 0.3rem;
     }
 }
 
+@media screen and (max-width: 450px) {
+    .section-heading {
+        font-size: 3.2rem;
+    }
+}
+
+/* Adjust the alignment of the external link icon */
+@media screen and (max-width: 1148px) and (min-width: 950px) {
+    .padding-top-mini {
+        padding-top: 0;
+    }
+}
+
+/* Add hover states on larger screens */
 @media screen and (min-width: 500px) {
     .contact-button:hover {
         transform: translateY(-8px);
@@ -937,13 +1033,19 @@ body.header-not-at-top .continue-icon {
         box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), /* 8dp - umbra */
         0px 8px 10px 1px rgba(0, 0, 0, 0.14), /* 8dp - penumbra */
         0px 3px 14px 2px rgba(0, 0, 0, 0.12); /* 8dp - ambient */
-        transition: box-shadow 0.2s ease, transform 0.2s ease;
+    }
+
+    .disease-button:hover, .disease-button:active {
+        stroke: var(--color-primary-900);
+    }
+
+    .disease-button:hover .button-icon, .disease-button:active .button-icon {
+        right: 2rem;
     }
 
     .disease-button:active {
         box-shadow: none;
         outline: none;
-        transition: box-shadow 0.2s ease;
     }
 
     .continue-icon:hover {
