--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ a {
     display: block;
     width: 0;
     height: 3px;
-    background: var(--color-primary-900);
+    background: var(--color-primary-500);
     transition: width 0.5s;
 }
 
@@ -617,9 +617,20 @@ a {
     box-sizing: border-box;
     border: var(--border-card);
     border-radius: var(--border-radius);
-    padding: 3.2rem;
+    padding: 4rem 3.2rem 3.2rem;
     box-shadow: var(--box-shadow-card);
     background-color: var(--color-background-card);
+    position: relative;
+}
+
+.card-accent {
+    width: 100%;
+    height: 0.8rem;
+    background-color: var(--color-primary-500);
+    position: absolute;
+    top: 0;
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+    align-self: center;
 }
 
 .about-card-image {
@@ -690,7 +701,7 @@ a {
 .landing-graphic {
     position: absolute;
     right: -25rem;
-    bottom: -1.1rem;
+    bottom: -0.6rem;
     max-height: 80vh;
     max-width: 95rem;
     z-index: 1;
@@ -1394,7 +1405,7 @@ body.header-not-at-top .continue-icon {
 @media screen and (min-width: 1500px) {
     .landing-graphic {
         position: absolute;
-        bottom: -1.1rem;
+        bottom: -0.6rem;
         right: 0;
     }
 }
