--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
     --color-text-primary: #1F293F; /* 13.66 contrast against F7F8FB */
     --color-text-secondary: #586179; /* 5.81 contrast against F7F8FB */
     --color-text-hovered: #636D83; /* 4.88 contrast against F7F8FB */
+    --color-text-title: #1F2B49;
     --color-link-hover: #2D4F9F;
     --color-text-white: #FAFCFF;
     --color-text-white-footer: #DDE6FC;
@@ -413,6 +414,7 @@ a {
     font-weight: 900;
     letter-spacing: -0.05em;
     max-width: 50rem;
+    color: var(--color-text-title);
 }
 
 .title-subheading {
@@ -900,6 +902,39 @@ a {
 
 .center-text {
     text-align: center;
+}
+
+.border-radius {
+    border-radius: var(--border-radius);
+}
+
+.content-auto {
+    content-visibility: auto;
+}
+
+.blurry-placeholder {
+    background-size: cover;
+}
+
+.blurry-placeholder-landing {
+    background-image: url("assets/blurry_placeholders/landing_placeholder.png");
+}
+
+.blurry-placeholder-gradient {
+    background-image: linear-gradient(90deg, rgba(233,236,253,1) 0%, rgba(159,175,246,1) 35%, rgba(173,248,163,1) 100%);
+    border-radius: var(--border-radius);
+}
+
+.blurry-placeholder-color {
+    background-color: rgba(22, 37, 71, 0.15);
+}
+
+.blurry-placeholder-image-map {
+    background-image: url("assets/blurry_placeholders/maps_placeholder.svg");
+}
+
+.blurry-placeholder-image-contact {
+    background-image: url("assets/blurry_placeholders/contact_placeholder.svg");
 }
 
 .fadeInUp {
